--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "wing": "bin/wing.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -39,5 +40,10 @@
   },
   "engines": {
     "node": "^10.12.0 || ^12.0.0 || >= 14.0.0"
+  },
+  "devDependencies": {
+    "node-loader": "^2.0.0",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.7.0"
   }
 }
