--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "url": "https://github.com/Wayley/wing-cli/issues"
   },
   "homepage": "https://github.com/Wayley/wing-cli#readme",
+  "engines": {
+    "node": "^10.12.0 || ^12.0.0 || >= 14.0.0"
+  },
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
@@ -38,12 +41,10 @@
     "shelljs": "^0.8.4",
     "validate-npm-package-name": "^3.0.0"
   },
-  "engines": {
-    "node": "^10.12.0 || ^12.0.0 || >= 14.0.0"
-  },
   "devDependencies": {
-    "node-loader": "^2.0.0",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0"
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-shebang-plugin": "^1.1.4"
   }
 }
