--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "copyright": "Wayley",
   "main": "bin/wing.js",
   "bin": {
-    "wing": "bin/wing.js"
+    "wing": "dist/wing.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
