--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "bin": {
     "wing": "dist/wing.js"
   },
+  "files": [
+    "dist/*.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
