--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "wing-cli",
+  "name": "@wing/cli",
   "version": "0.0.1",
   "description": "This is a cli tool for quickly starting a plug-in module, a package or an application",
   "copyright": "Robben Wadlay©",
   "main": "dist/wing.js",
   "bin": {
-    "wing": "dist/wing.js",
-    "wing-test": "src/bin/index.js"
+    "wing": "dist/wing.js"
   },
   "files": [
     "dist/*.js"
