--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "commander": "^6.2.0",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
+    "leven": "^3.1.0",
     "semver": "^7.3.2",
     "shelljs": "^0.8.4",
     "validate-npm-package-name": "^3.0.0"
